fix(accordion): fix accordion-item too tall because of sdds-icon inline-block

--- a/tegel/src/components/accordion/accordion.scss
+++ b/tegel/src/components/accordion/accordion.scss
@@ -53,6 +53,10 @@
       transform-origin: center;
       transition: transform 0.15s ease-in-out;
       color: var(--sdds-accordion-colour);
+
+      & > sdds-icon {
+        display: block;
+      }
     }
   }
 
